--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/styles.scss">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 <title></title>
 </head>
 
@@ -29,21 +32,30 @@
       </div>
       <!-- burger -->
 
-      <!-- <nav class="nav header__nav">
-        <ul class="nav-list header__nav-list">
-          <li class="nav-list__item"><a href="#" class="nav-list__link">about</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__link">style</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__link">menu</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__link">salon</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__link">access</a></li>
-        </ul>
-      </nav>
+      <div class="menu">
 
-      <ul class="sns-list header__sns-list">
-        <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-youtube.png" alt=""  class="sns-list__image">youtube</a></li>
-        <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-instagram.png" alt=""  class="sns-list__image">insta</a></li>
-        <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-line.png" alt=""  class="sns-list__image">line</a></li>
-      </ul> -->
+        <div class="btn --reserve">
+          <a href="" class="">Reserve</a>
+        </div>
+
+        <nav class="nav header-nav opensans textuppercase">
+          <ul class="nav-list  header-nav__list">
+            <li class="nav-list__item header-nav__item"><a href="#" class="nav-list__link header-nav__link">about</a></li>
+            <li class="nav-list__item header-nav__item"><a href="#" class="nav-list__link header-nav__link">style</a></li>
+            <li class="nav-list__item header-nav__item"><a href="#" class="nav-list__link header-nav__link">menu</a></li>
+            <li class="nav-list__item header-nav__item"><a href="#" class="nav-list__link header-nav__link">salon</a></li>
+            <li class="nav-list__item header-nav__item"><a href="#" class="nav-list__link header-nav__link">access</a></li>
+          </ul>
+        </nav>
+
+        <ul class="sns-list header__sns-list">
+          <li class="sns-list__item"><a href="#" class="sns-list__link"><img src="assets/images/icons-youtube.png" alt=""  class="sns-list__image"></a></li>
+          <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-instagram.png" alt=""  class="sns-list__image"></a></li>
+          <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-line.png" alt=""  class="sns-list__image"></a></li>
+        </ul>
+      </div>
+      <!-- menu -->
+
     </div>
     <!-- header__wrap -->
   </header>
