--- a/salon.html
+++ b/salon.html
@@ -17,7 +17,7 @@
     <div class="header__wrap">
 
       <h1 class="site-title">
-        <a href="#" class="site-title__link">
+        <a href="index.html" class="site-title__link">
           <picture class="mv-bottom__image">
             <source media="(max-width: 767px)" srcset="assets/images/header-logo-sp.png">
             <source media="(min-width: 768px)" srcset="assets/images/header-logo-pc.png">
@@ -60,9 +60,65 @@
     </div>
     <!-- header__wrap -->
   </header>
-  <main>
 
-   </main>
+  <main>
+    <div class="inner">
+      <div class="page-mv">
+        <picture class="about__image">
+          <source media="(max-width: 767px)" srcset="assets/images/salon-mv-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/salon-mv-pc.jpg">
+          <img src="assets/images/salon-image-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+      </div>
+      <!-- page-mv -->
+
+      <div class="breadcrumbs textuppercase">
+        <div class="breadcrumbs__inner">
+          <span class="breadcrumbs__item"><a href="">home</a></span>
+          <span class="breadcrumbs__item breadcrumbs__arrow"></span>
+          <span class="breadcrumbs__item --light"><a href="">salon</a></span>
+        </div>
+        <!-- breadcrumb__inner -->
+      </div>
+      <!-- breadcrumb -->
+
+      <h2 class="heading page-heading en">salon<span class="jp mt10">サロン</span></h2>
+  
+      <p class="page-lead">東京、表参道のシェアサロン「 One day 」。サロン周りは静かでこじんまりとした超隠れ家サロンです。木の温もりが感じられるお洒落な落ち着く空間でマンツーマンで施術させていただきます！</p>
+
+      <div class="cta">
+  
+        <div class="cta__wrap">
+          <picture class="cta__image">
+            <source media="(max-width: 767px)" srcset="assets/images/salon-cta-img-sp.jpg">
+            <source media="(min-width: 768px)" srcset="assets/images/salon-cta-img-pc.jpg">
+            <img src="assets/images/salon-cta-img-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+          </picture>
+          <!-- /cta__image -->
+  
+          <div class="btn-cont">
+            <div class="btn-wrap">
+              <a href="index.html" class="btn --cta">home</a>
+            </div>
+  
+            <div class="btn-wrap">
+              <a href="" class="btn --cta reserve-icon">reserve</a>
+            </div>
+          </div>
+          <!-- btn-cont -->
+        </div>
+        <!-- cta__wrap -->
+  
+      </div>
+      <!-- cta -->
+    </div>
+    <!-- inner -->
+
+
+
+
+
+  </main>
 
   <footer id="footer" class="footer">
     <div class="inner">
