--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-<title></title>
+<title>ABOUT | Ryo Murayama</title>
 </head>
 
 <body>
@@ -65,9 +65,9 @@
     <div class="inner">
       <div class="page-mv">
         <picture class="about__image">
-          <source media="(max-width: 767px)" srcset="assets/images/about-mv-sp.jpg">
-          <source media="(min-width: 768px)" srcset="assets/images/about-mv-pc.jpg">
-          <img src="assets/images/about-mv-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+          <source media="(max-width: 767px)" srcset="assets/images/about/about-mv-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/about/about-mv-pc.jpg">
+          <img src="assets/images/about/about-mv-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
         </picture>
       </div>
       <!-- page-mv -->
@@ -86,13 +86,94 @@
   
       <p class="page-lead">美容師の技術、うまさは正直行ってみないとわからないですよね。僕の考えとしてはライフスタイルやファッションに共通点がある美容師が髪型を作った方がファッションから髪型を作るのが上手いので似合わせられると思うんですよね。そこで僕のファッションやライフスタイルを紹介したいと思います！</p>
 
+      <div class="page__wrap about-img-01">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/about/about-img-01-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/about/about-img-01-pc.jpg">
+          <img src="assets/images/about/about-img-01-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc">フードは被る派。</span>
+      </div>
+      <!-- page__wrap -->
+    
+      <div class="page__wrap about-img-02">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/about/about-img-02-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/about/about-img-02-pc.jpg">
+          <img src="assets/images/about/about-img-02-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc">夏はタンクトップにベンサン。</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap about-img-03">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/about/about-img-03-sp.png">
+          <source media="(min-width: 768px)" srcset="assets/images/about/about-img-03-pc.png">
+          <img src="assets/images/about/about-img-03-sp.png" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc tar">ダサくてお洒落なニットポロ。</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap about-img-04">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/about/about-img-04-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/about/about-img-04-pc.jpg">
+          <img src="assets/images/about/about-img-04-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc pab tver">エンダースキーマの小物たち。</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap about-img-05">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/about/about-img-05-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/about/about-img-05-pc.jpg">
+          <img src="assets/images/about/about-img-05-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc">服はStevenalan、1Ldk、古着。</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="about__cont">
+
+        <div class="page__wrap about-img-06">
+          <picture class="page__image-wrap">
+            <source media="(max-width: 767px)" srcset="assets/images/about/about-img-06-sp.jpg">
+            <source media="(min-width: 768px)" srcset="assets/images/about/about-img-06-pc.jpg">
+            <img src="assets/images/about/about-img-06-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+          </picture>
+  
+          <span class="page__image-desc tar">植物っていいよね。</span>
+        </div>
+        <!-- page__wrap -->
+  
+        <div class="page__wrap about-img-07">
+          <picture class="page__image-wrap">
+            <source media="(max-width: 767px)" srcset="assets/images/about/about-img-07-sp.jpg">
+            <source media="(min-width: 768px)" srcset="assets/images/about/about-img-07-pc.jpg">
+            <img src="assets/images/about/about-img-07-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+          </picture>
+  
+          <span class="page__image-desc tar">僕の愛用してる無骨なベッド。</span>
+        </div>
+        <!-- page__wrap -->
+      </div>
+      <!-- about__cont -->
+
       <div class="cta">
   
         <div class="cta__wrap">
           <picture class="cta__image">
-            <source media="(max-width: 767px)" srcset="assets/images/about-cta-img-sp.jpg">
-            <source media="(min-width: 768px)" srcset="assets/images/about-cta-img-pc.jpg">
-            <img src="assets/images/about-cta-img-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+            <source media="(max-width: 767px)" srcset="assets/images/about/about-cta-img-sp.jpg">
+            <source media="(min-width: 768px)" srcset="assets/images/about/about-cta-img-pc.jpg">
+            <img src="assets/images/about/about-mv-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
           </picture>
           <!-- /cta__image -->
   
