--- a/menu.html
+++ b/menu.html
@@ -86,6 +86,79 @@
   
       <p class="page-lead">僕のメニューは少し変わっていて、初回の施術より２回目以降の施術の方が安いです！すべてマンツーマンで行い、カットには丁寧に1時間かけてパーマで完成の形を作ります。だから実現できるノンスタイリング！又は30秒スタイリング！しかもお洒落。いやそれがお洒落！</p>
 
+      <div class="menu__wrap menu-cut">
+        <div>
+
+          <h2 class="heading top-page-heading en border mt50">cut<span class="jp">カット</span></h2>
+        </div>
+  
+        <div class="menu__cont">
+          <h3 class="menu__title menu__flex">カット<span class="menu__price">6,600円</span></h3>
+  
+          <ul class="menu__list">
+            <li class="menu__list-item menu__flex">前回から30日以内カット<span class="menu__price">5,000円</span></li>
+            <li class="menu__list-item menu__flex">前回から45日以内カット<span class="menu__price">5,500円</span></li>
+            <li class="menu__list-item menu__flex">前回から60日以内カット<span class="menu__price">6,000円</span></li>
+          </ul>
+        </div>
+        <!-- menu__cont -->
+      </div>
+      <!-- menu__wrap -->
+
+      <div class="menu__wrap mt60">
+        <h2 class="heading top-page-heading en border mt50">perm<span class="jp">パーマ</span></h2>
+  
+        <div class="menu__cont">
+          <h3 class="menu__title menu__flex">カットパーマ<span class="menu__price">13,200円</span></h3>
+  
+          <ul class="menu__list">
+            <li class="menu__list-item menu__flex">前回から30日以内のカットパーマ<span class="menu__price">10,000円</span></li>
+            <li class="menu__list-item menu__flex">前回から45日以内のカットパーマ<span class="menu__price">11,000円</span></li>
+            <li class="menu__list-item menu__flex">前回から60日以内のカットパーマ<span class="menu__price">12,000円</span></li>
+          </ul>
+  
+        </div>
+        <!-- menu__cont -->
+      </div>
+      <!-- menu__wrap -->
+
+      <div class="menu__wrap mt60">
+        <h2 class="heading top-page-heading en border mt50">color<span class="jp">カラー</span></h2>
+  
+        <div class="menu__cont">
+          <h3 class="menu__title menu__flex">カラー<span class="menu__price">6,600円</span></h3>
+  
+          <ul class="menu__list">
+            <li class="menu__list-item menu__flex">前回から30日以内カラー<span class="menu__price">5,000円</span></li>
+            <li class="menu__list-item menu__flex">前回から45日以内カラー<span class="menu__price">5,500円</span></li>
+            <li class="menu__list-item menu__flex">前回から60日以内カラー<span class="menu__price">6,000円</span></li>
+          </ul>
+  
+        </div>
+        <!-- menu__cont -->
+      </div>
+      <!-- menu__wrap -->
+
+      <div class="menu__wrap mt60">
+        <h2 class="heading top-page-heading en border mt50">other<span class="jp">その他のメニュー</span></h2>
+  
+        <div class="menu__cont column-wrap --other">
+          <p class="menu__title menu__flex">ストレートパーマ<span class="menu__price">6,600円</span></p>
+          <p class="menu__title menu__other menu__flex mt150">前髪ストレート<span class="menu__price">4,400円</span></p>
+          <p class="menu__title menu__other menu__flex mt150">縮毛矯正<span class="menu__price">13,200円</span></p>
+          <p class="menu__title menu__other menu__flex mt150">前髪縮毛<span class="menu__price">6,600円</span></p>
+          <p class="menu__title menu__other menu__flex mra">トリートメント<span class="menu__price">3,300円</span></p>
+          <p class="menu__title menu__other menu__flex mt150 mra">ケアブリーチ、ケアパーマ<span class="menu__price">2,200円</span></p>
+
+          <div class="menu__bottom mra">
+            <p class="menu__tax mra">料金はすべて税込み金額です。</p>
+            <p class="menu__attention">カットを含まないメニューは別途でシャンプーブロー代 1100円頂きます。</p>
+          </div>
+        
+        <!-- menu__cont -->
+      </div>
+      <!-- menu__wrap -->
+
       <div class="cta">
   
         <div class="cta__wrap">
