--- a/style.html
+++ b/style.html
@@ -86,6 +86,99 @@
   
       <p class="page-lead">美容師の僕がこんな事を言うのは変かもしれないですが、ファッションがお洒落じゃなきゃヘアが決まっていても意味がないです！髪にお金をかけるのはファッションの後です！だって両方セットでオシャレじゃないですか？僕はオシャレな人、オシャレになりたい人に協力したいです！かっこいいよりオシャレなラフなスタイルを提案します！</p>
 
+      <div class="page__wrap style-img-01">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-01-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-01-pc.jpg">
+          <img src="assets/images/style/style-img-01-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc style__type opensans tver">STYLE01 Center pert</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-02">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-02-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-02-pc.jpg">
+          <img src="assets/images/style/style-img-02-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc">強めパーマのセンターパート。COMOLIのシャツに<br>よく似合う。</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-03">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-03-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-03-pc.jpg">
+          <img src="assets/images/style/style-img-03-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-04">
+        <span class="page__image-desc style__type opensans">Style02 Mash</span>
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-04-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-04-pc.png">
+          <img src="assets/images/style/style-img-04-sp.png" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc style__type opensans">Style02 Mash</span>
+        <span class="page__image-desc">眉上のカールマッシュがメガネと相まって大人の余裕。</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-05">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-05-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-05-pc.jpg">
+          <img src="assets/images/style/style-img-05-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-06">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-06-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-06-pc.jpg">
+          <img src="assets/images/style/style-img-06-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-07">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-07-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-07-pc.jpg">
+          <img src="assets/images/style/style-img-07-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc">就活も普段のファッションにもおすすめなラフなベリショ。</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-08">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-08-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-08-pc.jpg">
+          <img src="assets/images/style/style-img-08-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+
+        <span class="page__image-desc style__type opensans tver">Style03 Berry short</span>
+      </div>
+      <!-- page__wrap -->
+
+      <div class="page__wrap style-img-09">
+        <picture class="page__image-wrap">
+          <source media="(max-width: 767px)" srcset="assets/images/style/style-img-09-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-09-pc.jpg">
+          <img src="assets/images/style/style-img-09-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+        </picture>
+      </div>
+      <!-- page__wrap -->
+
       <div class="cta">
   
         <div class="cta__wrap">
