--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-<title></title>
+<title>MENU | Ryo Murayama</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
       <div class="menu">
 
         <div class="btn-wrap">
-          <a href="" class="btn --reserve">Reserve</a>
+          <a href="https://stekina.com/profile/F8DL-ER54" class="btn --reserve">Reserve</a>
         </div>
 
         <nav class="nav header-nav opensans textuppercase">
@@ -45,13 +45,13 @@
             <li class="nav-list__item header-nav__item"><a href="style.html" class="nav-list__link header-nav__link">style</a></li>
             <li class="nav-list__item header-nav__item"><a href="menu.html" class="nav-list__link header-nav__link">menu</a></li>
             <li class="nav-list__item header-nav__item"><a href="salon.html" class="nav-list__link header-nav__link">salon</a></li>
-            <li class="nav-list__item header-nav__item"><a href="#" class="nav-list__link header-nav__link">access</a></li>
+            <li class="nav-list__item header-nav__item"><a href="salon.html#access" class="nav-list__link header-nav__link">access</a></li>
           </ul>
         </nav>
 
         <ul class="sns-list header__sns-list">
-          <li class="sns-list__item"><a href="#" class="sns-list__link"><img src="assets/images/icons-youtube.png" alt=""  class="sns-list__image"></a></li>
-          <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-instagram.png" alt=""  class="sns-list__image"></a></li>
+          <li class="sns-list__item"><a href="https://www.youtube.com/@free-lanceryomurayama1139" target="_blank" class="sns-list__link"><img src="assets/images/icons-youtube.png" alt=""  class="sns-list__image"></a></li>
+          <li class="sns-list__item"><a href="https://www.instagram.com/ryo_mens.hair/" target="_blank" class="sns-list__link"><img src="assets/images/icons-instagram.png" alt=""  class="sns-list__image"></a></li>
           <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-line.png" alt=""  class="sns-list__image"></a></li>
         </ul>
       </div>
@@ -74,9 +74,9 @@
 
       <div class="breadcrumbs textuppercase">
         <div class="breadcrumbs__inner">
-          <span class="breadcrumbs__item"><a href="">home</a></span>
+          <span class="breadcrumbs__item"><a href="index.html">home</a></span>
           <span class="breadcrumbs__item breadcrumbs__arrow"></span>
-          <span class="breadcrumbs__item --light"><a href="">menu</a></span>
+          <span class="breadcrumbs__item --light">menu</span>
         </div>
         <!-- breadcrumb__inner -->
       </div>
@@ -171,11 +171,11 @@
   
           <div class="btn-cont">
             <div class="btn-wrap">
-              <a href="" class="btn --cta">salon</a>
+              <a href="salon.html" class="btn --cta">salon</a>
             </div>
   
             <div class="btn-wrap">
-              <a href="" class="btn --cta reserve-icon">reserve</a>
+              <a href="https://stekina.com/profile/F8DL-ER54" class="btn --cta reserve-icon">reserve</a>
             </div>
           </div>
           <!-- btn-cont -->
@@ -187,10 +187,6 @@
     </div>
     <!-- inner -->
 
-
-
-
-
   </main>
 
   <footer id="footer" class="footer">
@@ -199,7 +195,7 @@
       <div class="footer__cont">
 
         <div class="site-title --footer">
-          <a href="#" class="site-title__link">
+          <a href="index.html" class="site-title__link">
             <picture class="mv-bottom__image">
               <source media="(max-width: 767px)" srcset="assets/images/header-logo-sp.png">
               <source media="(min-width: 768px)" srcset="assets/images/header-logo-pc.png">
@@ -216,7 +212,7 @@
             <p class="footer-access__name">シェアサロン「 One day 」</p>
             <p class="footer-access__postnum">〒 150-0001</p>
             <p class="footer-access__address">東京都渋谷区神宮前 5-42-17<br class="pc-none">コーポ青葉 101</p>
-            <p class="footer-access__map">Google map</p>
+            <a href="" class="footer-access__map">Google map</a>
           </div>
         </div>
         <!-- footer-access -->
@@ -230,7 +226,7 @@
               <li class="nav-list__item footer-nav__item"><a href="style.html" class="nav-list__link footer-nav__link">style</a></li>
               <li class="nav-list__item footer-nav__item"><a href="menu.html" class="nav-list__link footer-nav__link">menu</a></li>
               <li class="nav-list__item footer-nav__item"><a href="salon.html" class="nav-list__link footer-nav__link">salon</a></li>
-              <li class="nav-list__item footer-nav__item"><a href="#" class="nav-list__link footer-nav__link">access</a></li>
+              <li class="nav-list__item footer-nav__item"><a href="salon.html#access" class="nav-list__link footer-nav__link">access</a></li>
             </ul>
           </nav>
         </div>
@@ -240,9 +236,9 @@
           <p class="footer-list__title textuppercase">sns</p>
   
           <ul class="footer-sns__list column-wrap">
-            <li class="footer-sns__item"><a href="" class="footer-sns__link"><img src="assets/images/icons-instagram.png" alt="" class="footer-sns__image">instagram</a></li>
+            <li class="footer-sns__item"><a href="https://www.instagram.com/ryo_mens.hair/" class="footer-sns__link"><img src="assets/images/icons-instagram.png" alt="" class="footer-sns__image">instagram</a></li>
             <li class="footer-sns__item"><a href="" class="footer-sns__link"><img src="assets/images/icons-line.png" alt="" class="footer-sns__image">LINE</a></li>
-            <li class="footer-sns__item"><a href="" class="footer-sns__link"><img src="assets/images/icons-youtube.png" alt="" class="footer-sns__image">Youtube</a></li>
+            <li class="footer-sns__item"><a href="https://www.youtube.com/@free-lanceryomurayama1139" class="footer-sns__link"><img src="assets/images/icons-youtube.png" alt="" class="footer-sns__image">Youtube</a></li>
           </ul>
         </div>
         <!-- footer-sns-wrap -->
@@ -254,11 +250,15 @@
     <!-- inner -->
 
     <div class="btn-wrap">
-      <a href="" class="btn --reserve spfixed reserve-icon">reserve</a>
+      <a href="https://stekina.com/profile/F8DL-ER54" class="btn --reserve spfixed reserve-icon">reserve</a>
     </div>
 
     <div class="btn-wrap">
-      <a href="" class="btn --reserve pcfixed">reserve</a>
+      <a href="https://stekina.com/profile/F8DL-ER54" class="btn --reserve pcfixed">reserve</a>
+    </div>
+
+    <div id="toTop" class="toTop">
+      <img src="assets/images/toTop-sp.svg" alt="">
     </div>
 
   </footer>
