--- a/salon.html
+++ b/salon.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-<title></title>
+<title>SALON | Ryo Murayama</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
       <div class="menu">
 
         <div class="btn-wrap">
-          <a href="" class="btn --reserve">Reserve</a>
+          <a href="https://stekina.com/profile/F8DL-ER54" class="btn --reserve">Reserve</a>
         </div>
 
         <nav class="nav header-nav opensans textuppercase">
@@ -45,13 +45,13 @@
             <li class="nav-list__item header-nav__item"><a href="style.html" class="nav-list__link header-nav__link">style</a></li>
             <li class="nav-list__item header-nav__item"><a href="menu.html" class="nav-list__link header-nav__link">menu</a></li>
             <li class="nav-list__item header-nav__item"><a href="salon.html" class="nav-list__link header-nav__link">salon</a></li>
-            <li class="nav-list__item header-nav__item"><a href="#" class="nav-list__link header-nav__link">access</a></li>
+            <li class="nav-list__item header-nav__item"><a href="salon.html#access" class="nav-list__link header-nav__link">access</a></li>
           </ul>
         </nav>
 
         <ul class="sns-list header__sns-list">
-          <li class="sns-list__item"><a href="#" class="sns-list__link"><img src="assets/images/icons-youtube.png" alt=""  class="sns-list__image"></a></li>
-          <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-instagram.png" alt=""  class="sns-list__image"></a></li>
+          <li class="sns-list__item"><a href="https://www.youtube.com/@free-lanceryomurayama1139" target="_blank" class="sns-list__link"><img src="assets/images/icons-youtube.png" alt=""  class="sns-list__image"></a></li>
+          <li class="sns-list__item"><a href="https://www.instagram.com/ryo_mens.hair/" target="_blank" class="sns-list__link"><img src="assets/images/icons-instagram.png" alt=""  class="sns-list__image"></a></li>
           <li class="sns-list__item"><a href="#"  class="sns-list__link"><img src="assets/images/icons-line.png" alt=""  class="sns-list__image"></a></li>
         </ul>
       </div>
@@ -74,9 +74,9 @@
 
       <div class="breadcrumbs textuppercase">
         <div class="breadcrumbs__inner">
-          <span class="breadcrumbs__item"><a href="">home</a></span>
+          <span class="breadcrumbs__item"><a href="index.html">home</a></span>
           <span class="breadcrumbs__item breadcrumbs__arrow"></span>
-          <span class="breadcrumbs__item --light"><a href="">salon</a></span>
+          <span class="breadcrumbs__item --light">salon</span>
         </div>
         <!-- breadcrumb__inner -->
       </div>
@@ -94,23 +94,23 @@
           <img src="assets/images/salon/salon-img-01-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
         </picture>
 
-        <span class="page__image-desc tar">この看板が目印。</span>
+        <span class="page__image-desc">この看板が目印。</span>
       </div>
       <!-- page__wrap -->
 
       <div class="page__wrap salon-img-02">
         <picture class="page__image-wrap">
-          <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-02-sp.jpg">
-          <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-02-pc.jpg">
-          <img src="assets/images/salon/salon-img-02-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
+          <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-02-sp.png">
+          <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-02-pc.png">
+          <img src="assets/images/salon/salon-img-02-sp.png" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
         </picture>
       </div>
       <!-- page__wrap -->
 
       <div class="page__wrap salon-img-03">
         <picture class="page__image-wrap">
-          <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-03sp.jpg">
-          <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-03pc.jpg">
+          <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-03-sp.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-03-pc.jpg">
           <img src="assets/images/salon/salon-img-03sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
         </picture>
 
@@ -125,7 +125,7 @@
           <img src="assets/images/salon/salon-img-04-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
         </picture>
 
-        <span class="page__image-desc tar">まずはシャンプー。</span>
+        <span class="page__image-desc">まずはシャンプー。</span>
       </div>
       <!-- page__wrap -->
 
@@ -140,7 +140,7 @@
       </div>
       <!-- page__wrap -->
 
-      <section class="top-access">
+      <section id="access" class="top-access">
         <div class="top-access__cont">
 
           <div class="top-access__right right-cont">
@@ -196,7 +196,7 @@
             </div>
   
             <div class="btn-wrap">
-              <a href="" class="btn --cta reserve-icon">reserve</a>
+              <a href="https://stekina.com/profile/F8DL-ER54" class="btn --cta reserve-icon">reserve</a>
             </div>
           </div>
           <!-- btn-cont -->
@@ -208,10 +208,6 @@
     </div>
     <!-- inner -->
 
-
-
-
-
   </main>
 
   <footer id="footer" class="footer">
@@ -220,7 +216,7 @@
       <div class="footer__cont">
 
         <div class="site-title --footer">
-          <a href="#" class="site-title__link">
+          <a href="index.html" class="site-title__link">
             <picture class="mv-bottom__image">
               <source media="(max-width: 767px)" srcset="assets/images/header-logo-sp.png">
               <source media="(min-width: 768px)" srcset="assets/images/header-logo-pc.png">
@@ -237,7 +233,7 @@
             <p class="footer-access__name">シェアサロン「 One day 」</p>
             <p class="footer-access__postnum">〒 150-0001</p>
             <p class="footer-access__address">東京都渋谷区神宮前 5-42-17<br class="pc-none">コーポ青葉 101</p>
-            <p class="footer-access__map">Google map</p>
+            <a href="" class="footer-access__map">Google map</a>
           </div>
         </div>
         <!-- footer-access -->
@@ -251,7 +247,7 @@
               <li class="nav-list__item footer-nav__item"><a href="style.html" class="nav-list__link footer-nav__link">style</a></li>
               <li class="nav-list__item footer-nav__item"><a href="menu.html" class="nav-list__link footer-nav__link">menu</a></li>
               <li class="nav-list__item footer-nav__item"><a href="salon.html" class="nav-list__link footer-nav__link">salon</a></li>
-              <li class="nav-list__item footer-nav__item"><a href="#" class="nav-list__link footer-nav__link">access</a></li>
+              <li class="nav-list__item footer-nav__item"><a href="salon.html#access" class="nav-list__link footer-nav__link">access</a></li>
             </ul>
           </nav>
         </div>
@@ -261,9 +257,9 @@
           <p class="footer-list__title textuppercase">sns</p>
   
           <ul class="footer-sns__list column-wrap">
-            <li class="footer-sns__item"><a href="" class="footer-sns__link"><img src="assets/images/icons-instagram.png" alt="" class="footer-sns__image">instagram</a></li>
+            <li class="footer-sns__item"><a href="https://www.instagram.com/ryo_mens.hair/" target="_blank" class="footer-sns__link"><img src="assets/images/icons-instagram.png" alt="" class="footer-sns__image">instagram</a></li>
             <li class="footer-sns__item"><a href="" class="footer-sns__link"><img src="assets/images/icons-line.png" alt="" class="footer-sns__image">LINE</a></li>
-            <li class="footer-sns__item"><a href="" class="footer-sns__link"><img src="assets/images/icons-youtube.png" alt="" class="footer-sns__image">Youtube</a></li>
+            <li class="footer-sns__item"><a href="https://www.youtube.com/@free-lanceryomurayama1139" target="_blank" class="footer-sns__link"><img src="assets/images/icons-youtube.png" alt="" class="footer-sns__image">Youtube</a></li>
           </ul>
         </div>
         <!-- footer-sns-wrap -->
@@ -275,11 +271,15 @@
     <!-- inner -->
 
     <div class="btn-wrap">
-      <a href="" class="btn --reserve spfixed reserve-icon">reserve</a>
+      <a href="https://stekina.com/profile/F8DL-ER54" class="btn --reserve spfixed reserve-icon">reserve</a>
     </div>
 
     <div class="btn-wrap">
-      <a href="" class="btn --reserve pcfixed">reserve</a>
+      <a href="https://stekina.com/profile/F8DL-ER54" class="btn --reserve pcfixed">reserve</a>
+    </div>
+
+    <div id="toTop" class="toTop">
+      <img src="assets/images/toTop-sp.svg" alt="">
     </div>
 
   </footer>
